@@ -24,8 +24,8 @@
 static SerdStatus
 test(SerdWorld* world, SerdSink* sink, const char* str, size_t stack_size)
 {
-	SerdReader* reader =
-		serd_reader_new(world, SERD_TURTLE, 0, sink, stack_size);
+	SerdReader* reader = serd_reader_new(
+	        world, SERD_TURTLE, SERD_READ_VARIABLES, sink, stack_size);
 
 	serd_reader_start_string(reader, str, NULL);
 	const SerdStatus st = serd_reader_read_document(reader);
@@ -52,6 +52,7 @@ main(void)
 	                      {":s :p \"literal\"", 336},
 	                      {":s :p \"verb\"", 275},
 	                      {":s :p _:blank .", 307},
+	                      {":s :p ?o .", 307},
 	                      {":s :p true .", 307},
 	                      {":s :p true .", 341},
 	                      {":s :p \"\"@en .", 339},
